# napi

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  mkdocs.yml  napi_server.py  pyproject.toml
docs/: driver.md  index.md  usage.md
docs/drivers/: cli.md  netconf.md
docs/inventory/: models.md  netbox.md
endpoints/: ping.py
endpoints/macgrabber/: __init__.py  api.py  docs.py  logger.py  models.py
endpoints/macgrabber/driver/: __init__.py  ce.py  cumulus.py  exceptions.py
endpoints/portswitcher/: __init__.py  api.py  docs.py  logger.py  models.py  views.py
endpoints/portswitcher/driver/: __init__.py  ce.py  cumulus.py  exceptions.py
endpoints/portswitcher/statics/css/: base.css
endpoints/portswitcher/templates/: index.html
napi/: auth.py  auth.yml  custom_handlers.py  logger.py  settings.py
napi/driver/: __init__.py  lib.py
napi/driver/abstract/: __init__.py  interface.py
napi/driver/cli/: __init__.py  constants.py  cumulus.py  driver.py  exceptions.py
napi/driver/netconf/: __init__.py  ce.py  constants.py  driver.py  exceptions.py  rpcs.py
napi/inventory/: __init__.py  exceptions.py  inventory.py  netbox.py
napi/lib/: __init__.py
