[tool.poetry]
name = "napi"
version = "0.0.1"
description = "Network API"
authors = ["Kirill 'horseinthesky' Pletnev <pwnedbyspawn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.92.0"
asyncssh = "^2.13.1"
xmltodict = "^0.12.0"
httpx = "^0.23.3"
scrapli = {extras = ["community"], version = "^2023.1.30"}

# Web UI deps
typesystem = "^0.4.1"
aiofiles = "^23.1.0"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
bootstrap4 = "^0.1.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-material = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
